<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NavigationCompoentExample</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_note">New Note</string>
    <string name="written_by">Written By</string>
    <string name="last_update">Last update</string>
    <string name="tags">Tags</string>
    <string name="name">Name</string>
    <string name="_4_jun_9_01_am">4 Jun ,9.01 AM</string>
    <string name="enter_the_title">Enter the Title</string>
    <string name="enter_the_description">Enter the Description</string>
    <string name="description">Description</string>
    <string name="title_optional">Title(Optional)</string>
    <string name="done">DONE</string>
    <string name="menu_one">Menu One</string>
    <string name="menu_2">menu_2</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="type_your_note_here">Type your note Here ..........</string>
    <string name="life_is_too_fast_dont_forgot_anything_just_note_it">life_is_too_fast_dont_forgot_anything_just_note_it</string>
    <string name="search_notes">Search Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type Note here ...</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">ADD URL</string>
    <string name="enter_the_url">Enter the Url</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="subtitle_optional">SubTitle (Optional)</string>
    <string name="arunkumar_m">ArunKumar M</string>
    <string name="update_note">Update Note</string>
    <string name="attach">attach</string>
    <string name="dailog_box">Dailog Box</string>
    <string name="enter_the_url_here">Enter the URl Here....</string>
    <string name="https_www_google_com">https://www.google.com</string>
    <string name="enter_note_description">Enter Note Description</string>
    <string name="www_google_com">WWW.google.com</string>
    <string name="today">Today</string>
    <string name="my_notes">MY NOTES</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="dont_think_just_read">Dont think just read</string>
    <string name="select_all">select all</string>
    <string name="delete">delete</string>
    <string name="voice">Voice</string>

    <style name="SubTopic" parent="TextAppearance.AppCompat">
        <item name="android:textColor">#9E9E9E</item>
        <item name="android:textSize">16sp</item>
        <item name="android:paddingStart">10dp</item>
        <item name="android:paddingEnd">10dp</item>
        <item name="android:paddingTop">10dp</item>
        <item name="android:paddingBottom">10dp</item>
        <item name="android:textAllCaps">false</item>

    </style>

    <style name="SubTopicValues" parent="TextAppearance.AppCompat">
        <item name="android:textColor">#212121</item>
        <item name="android:textSize">16sp</item>
        <item name="android:paddingStart">10dp</item>
        <item name="android:paddingEnd">10dp</item>
        <item name="android:paddingTop">10dp</item>
        <item name="android:paddingBottom">10dp</item>
        <item name="android:textAllCaps">false</item>
        <item name="hintTextColor">#212121</item>

    </style>

    <style name="Heading" parent="TextAppearance.AppCompat">

        <item name="android:layout_marginStart">@dimen/margin_small</item>
        <item name="android:textSize">25sp</item>
        <item name="android:textStyle">bold</item>
        <item name="fontFamily">@font/poppins_bold</item>
        <item name="paddingStart">@dimen/padding_large</item>
        <item name="paddingEnd">@dimen/padding_small</item>
        <item name="android:textAllCaps">false</item>
        <item name="android:layout_marginTop">20dp</item>
    </style>

    <style name="SearchEditText" parent="TextAppearance.AppCompat">

        <item name="android:layout_marginStart">@dimen/margin_large</item>
        <item name="android:textSize">16sp</item>
        <item name="fontFamily">@font/poppins_light</item>
        <item name="android:textAllCaps">false</item>
        <item name="android:layout_margin">@dimen/margin_small</item>
        <item name="android:drawablePadding">@dimen/padding_small</item>
        <item name="android:padding">@dimen/padding_small</item>
        <item name="background">@color/colorAccent</item>
        <item name="android:textAlignment">textStart</item>
        <item name="android:maxLines">1</item>
        <item name="android:textColor">@color/colorText</item>
        <item name="android:textColorHint">@color/colorTextHint</item>
        <item name="android:inputType">text</item>

    </style>


    <style name="EditTextAppearance" parent="Widget.AppCompat.EditText">
        <item name="colorControlNormal">@color/colorPrimary</item>
        <item name="colorControlActivated">@color/colorPrimary</item>
        <item name="colorControlHighlight">@color/colorPrimary</item>
    </style>


    <color name="colorPrimary">#FFC845</color>
    <color name="colorPrimaryDark">#FFB400</color>
    <color name="colorAccent">#FFC845</color>

    <color name="colorBackground">#FFFFFF</color>
    <color name="errorColor">#B71C1C</color>
    <color name="infoColor">#0F4C81</color>

    <color name="colorQuickActionsBackground">#EFEFEF</color>
    <color name="colorIcons">#0E0E0E</color>
    <color name="colorTextSubtitle">#2E2E2E</color>
    <color name="colorDefaultNoteColor">#F4F4F4</color>
    <color name="colorNoteSubtitleText">#292929</color>
    <color name="colorMiscellaneousBackground">#FAFAFA</color>
    <color name="colorText">#000000</color>
    <color name="colorNotecolor2">#FFB400</color>
    <color name="colorNotecolor3">#3B81FF</color>
    <color name="colorNotecolor4">#FF4E4E</color>
    <color name="colorNotecolor5">#13A662</color>
    <color name="colorNotecolor6">#FF388E</color>
    <color name="colorNotecolor7">#118E9C</color>
    <color name="colorNotecolor8">#FF822E</color>
    <color name="colorNotecolor9">#87f4b5</color>
    <color name="colorNotecolor10">#8ce2ff</color>
    <color name="colorDelete">#FF4842</color>
    <color name="colorSearchBackground">#EFEFEF</color>

    <color name="colorTextHint">#8A8A8A</color>
    <color name="colorMiscellanousBackground">#1F1F1F</color>
    <!--    <color name="colorNotecolor2">#9fbcf4</color>-->
    <!--    <color name="colorNotecolor3">#ffba59</color>-->
    <!--    <color name="colorNotecolor4">#ff8c8c</color>-->
    <!--    <color name="colorNotecolor5">#ff99e5</color>-->
    <!--    <color name="colorNotecolor6">#ffe065</color>-->
    <!--    <color name="colorNotecolor7">#c2a6ff</color>-->
    <!--    <color name="colorNotecolor8">#bcf493</color>-->
    <!--    <color name="colorNotecolor9">#87f4b5</color>-->
    <!--    <color name="colorNotecolor10">#8ce2ff</color>-->
    <color name="colorWhite">#e3e6e8</color>


    <color name="btnfocused" tools:ignore="MissingDefaultResource">#028576</color>
    <color name="buttonpressed">#e3e6e8</color>
</resources>